Fix test cases with the prefixed grid-areas that didn't count inherited gaps

--- a/test/cases/grid-template.out.css
+++ b/test/cases/grid-template.out.css
@@ -472,11 +472,11 @@
     -ms-grid-column: 1;
   }
   .k-4 {
-    -ms-grid-row: 2;
+    -ms-grid-row: 3;
     -ms-grid-column: 1;
   }
   .k-4 {
-    -ms-grid-row: 2;
+    -ms-grid-row: 3;
     -ms-grid-column: 1;
   }
   .k > .k-4 {
